--- a/03-week3.Rmd
+++ b/03-week3.Rmd
@@ -1,4 +1,4 @@
-# 推測統計学
+# Week 3：推測統計学
 
 ```{r, include=FALSE}
 library(tidyverse)
@@ -71,7 +71,6 @@ ggplot() +
 - 確率変数はスロットマシーンが回っている状態。実現値はスロットマシーンが止まって値が定まった状態をイメージするとよい
 
 ```{r, include = F}
-# アニメーション用データを作成
 set.seed(123)
 df <- expand.grid(frame = 1:7, slot = factor(1:3)) %>%
   mutate(value = sample(1:7, n(), replace = TRUE))  # 1-7のランダム値
@@ -87,8 +86,9 @@ p<- ggplot(df, aes(x = slot, y = 1, label = value)) +
     axis.ticks = element_blank()
   ) +
   ggtitle("スロットマシン") +
-  transition_states(frame, transition_length = 1, state_length = 0.5) +
-  enter_fade() + exit_fade()
+  gganimate::transition_states(frame, transition_length = 1, state_length = 0.5) +
+  gganimate::enter_fade() + 
+  gganimate::exit_fade()
 
 p
 ```
@@ -129,15 +129,15 @@ p1 <- ggplot(bernoulli, aes(factor(x), y)) +
 p2 <- ggplot(binomial, aes(x, y)) + 
   geom_bar(stat = "identity") + 
   ggtitle("Binomial Distribution") +
-  theme_minimal()
+  theme_minimal() + scale_x_continuous(breaks = 0:10)
 
 p3 <- ggplot(poisson, aes(x, y)) + 
   geom_bar(stat = "identity") + 
   ggtitle("Poisson Distribution") +
-  theme_minimal()
+  theme_minimal() + scale_x_continuous(breaks = 0:10)
 
 # 3つのプロットを横に並べて表示
-grid.arrange(p1, p2, p3, ncol = 3)
+gridExtra::grid.arrange(p1, p2, p3, ncol = 3)
 ```
 
 
@@ -200,32 +200,29 @@ grid.arrange(p1, p2, p3, ncol = 3)
   - しかし、これは母平均を事前に把握している場合を例であり、事前に母平均を知っていることは基本的にない。
 
 ```{r, echo=FALSE}
-# セットアップ
 set.seed(123)
-n <- 10000 # 生成する二項分布に従う乱数の個数
+n <- 10000
 theta <- 0.7
-
-# ベルヌーイ試行の回数ごとに二項分布を生成し、ggplot2でヒストグラムを描く
 k_values <- c(1, 10, 50, 100)
 plots <- list()
 
 for (k in k_values) {
-  # 二項分布に従う乱数の生成
-  data <- rbinom(n = n, size = k, prob = 0.7)
+  data <- rbinom(n = n, size = k, prob = theta)
   
-  # ggplotでヒストグラムを作成
   p <- ggplot(data.frame(x = data/k), aes(x)) + 
-    geom_histogram(bins = 30, fill = "skyblue", color = "black", alpha = 0.7) +
+    geom_histogram(aes(y = after_stat(count / sum(count))), bins = 30, 
+                   fill = "skyblue", color = "black", alpha = 0.7) +
     ggtitle(paste("Binomial Distribution (k =", k, ")")) +
     theme_minimal() +
-    scale_x_continuous(labels = scales::label_comma()) 
-  
+    scale_x_continuous(labels = scales::label_comma()) +
+    scale_y_continuous(labels = scales::percent_format(accuracy = 1)) # ← %表示にする
   plots[[length(plots) + 1]] <- p
 }
 
-
-plots[[1]] + plots[[2]] + plots[[3]] + plots[[4]] 
+# 4つを並べて表示
+plots[[1]] + plots[[2]] + plots[[3]] + plots[[4]]
 ```
+
 
 ## 区間推定の考え方
 ### 母集団分布に確率分布を仮定する
@@ -250,7 +247,7 @@ plots[[1]] + plots[[2]] + plots[[3]] + plots[[4]]
 
   - 期待値（Expected value）：確率分布の平均値のこと
 
-```{r, echo=FALSE}
+```{r, echo=FALSE, warning=FALSE, message=FALSE}
 # パラメータの設定
 mu_values <- c(0, 0, 0, -2)  # 平均 (0, 2, -2, 0)
 sigma_values <- c(0.2, 1, 5, 2)  # 標準偏差 (1, 1, 1, 2)
@@ -277,9 +274,15 @@ ggplot(data, aes(x = x, y = y, linetype = distribution)) +
   theme_minimal() 
 ```
 
-- 確率変数が離散的な値をとる場合、確率変数の実現値ろと確率は一対一対応している（例 1か0のデータ）。
+- 確率変数が離散的な値をとる場合、確率変数の実現値と確率は一対一対応している（例 1か0のデータ）。
 
-```{r, echo=FALSE}
+  - 例）下記図のように10回繰り返した場合、
+
+    - 成功数（5回） => 確率10%
+
+    - 成功数（6回） => 確率20%
+
+```{r, echo=FALSE, warning=FALSE, message=FALSE}
 # パラメータ設定
 set.seed(123)
 n <- 10000  # 乱数の個数
@@ -300,7 +303,7 @@ ggplot(data.frame(x = data), aes(x = x)) +
 
 ```
 
-- 確率変数が連続的な値をとる場合、実現値の値ではなく、その**範囲と確率**が対応する。つまり、確率分布の面積が確率と対応する（数値積分をして求めないといけない）。
+- 確率変数が連続的な値をとる場合、実現値の値ではなく、その**範囲と確率**が対応する。つまり、確率分布の**面積が確率と対応する**（数値積分をして求めないといけない）。
 
 ```{r, echo=FALSE}
 set.seed(123)
@@ -324,13 +327,20 @@ ggplot(density_df, aes(x = x, y = y)) +
   theme_minimal()
 ```
 
+- 積分する関数```integrate```を用いて、平均0、分散1の正規分布の実現値が0から1の範囲を求める。その結果はおよそ34.1%になる。
+
 ```{r}
-integrate(f = dnorm, lower = 0, upper = 1)
+stats::integrate(f = dnorm, lower = 0, upper = 1)
 ```
 
+::: infobox
+absolute errorは、計算における誤差です。```integrate```関数は**数値積分**を行いますが、この方法で積分された結果は理論上正しい結果とズレ（誤差）があります。このズレが正負無視してどれくらいあるかの数値です。
+:::
+
 - 平均値 ± **1.96** × 標準偏差で、標本分布の95%の範囲になる。
+
 - 白い部分は二か所合わせてデータの5%
-```{r, echo=FALSE}
+```{r, echo=FALSE, warning=FALSE, message=FALSE}
 set.seed(123)
 n <- 100000  # 乱数の個数
 
@@ -353,21 +363,23 @@ ggplot(density_df, aes(x = x, y = y)) +
        y = "Density") +
   theme_minimal()
 ```
-- mean(density_data$x) ± 1.96となっているのは、標準偏差が1であるため。
+- ```mean(density_data$x) ± 1.96```となっているのは、標準偏差が1であるため。
 ```{r}
 integrate(f = dnorm, lower = mean(density_data$x) - 1.96, upper = mean(density_data$x) + 1.96)
 ```
 
 ### 確率モデルを用いた推定
-- 適切な確率モデルが設定されているとき、母数を推定することは、確率モデルのパラメータがどのような値であるかを推測することと同じ。
+- **適切な確率モデルが設定されているとき**、母数を推定することは、確率モデルのパラメータがどのような値であるかを推測することと同じ。
 
 ### 正規分布モデルにおける標本平均の標本分布
 
 - **標準誤差（Standard Error: *SE*）**
 
   - 標本分布の標準偏差
-
-SE=\frac{\sigma}{\sqrt{n}}
+  
+$$
+SE = \frac{\sigma}{\sqrt{n}}
+$$
 
 - *n* = 標本サイズ 
 
@@ -507,7 +519,7 @@ s^2 = \frac{1}{n-1}S^2
 gmodels::ci(mtcars$mpg)
 ```
 
-- 上記の関数と一致した
+- ci関数と一致した
 ```{r}
 mean(mtcars$mpg) + qt(df = (nrow(mtcars)-1), .025) * sd(mtcars$mpg)/sqrt(nrow(mtcars))
 mean(mtcars$mpg) + qt(df = (nrow(mtcars)-1), .975) * sd(mtcars$mpg)/sqrt(nrow(mtcars))
@@ -522,6 +534,7 @@ mean(mtcars$mpg) + qt(df = (nrow(mtcars)-1), .975) * sd(mtcars$mpg)/sqrt(nrow(mt
 ## ハンズオンセッション
 
 ### データの読み込み
+- 先週の講義で配布。
 ```{r}
 dat <- read.csv("../stat_class_2025/sample_data/pokemon_data.csv")
 ```
@@ -553,8 +566,10 @@ hist(dat$こうげき, probability = TRUE)
 #probability = TRUE を指定すると、ヒストグラムの y軸が「確率密度」になる。分布をあてはめるときは、この設定をしないと当てはまらない。デフォルト（probability = FALSE）では「度数」（データの数）になる
 
 # 正規分布の確率密度関数を描画
+#「データの分布が もし正規分布に従っていたら どんな形になるか？」を、ヒストグラムの上に描く。
+#dnorm() は 正規分布 の確率密度関数を計算する。
+#平均 (mean(dat$こうげき)) と 標準偏差 (sd(dat$こうげき)) を使って 「理想的な正規分布」 の形を作る。lwd = 2で線の太さを少し太くする
 lines(x, dnorm(x, mean = mean(dat$こうげき), sd = sd(dat$こうげき)), lwd = 2)
-#「データの分布が もし正規分布に従っていたら どんな形になるか？」を、ヒストグラムの上に描く。dnorm() は 正規分布 の確率密度関数を計算する。平均 (mean(dat$こうげき)) と 標準偏差 (sd(dat$こうげき)) を使って 「理想的な正規分布」 の形を作る。lwd = 2で線の太さを少し太くする
 ```
 
 ### 母分散未知の母平均の95%信頼区間を求める
@@ -574,7 +589,7 @@ ci(dat$こうげき)
 ```
 
 ### qt関数
-- 必要なパーツ：平均値、*t*値、標本標準偏差（本当は\[{\sqrt{不偏分散}}\] = 不偏標準偏差）、サンプル数
+- 必要なパーツ：平均値、*t*値、標本標準偏差（本当は$\sqrt{\text{不偏分散}}$ = 不偏標準偏差）、サンプル数
 
   - sd関数は、標準偏差を算出する関数だが、分母をn-1した値を返している（= 不偏標準偏差）
 ```{r}
@@ -598,4 +613,50 @@ lower2 <- m + t_value_low * sd/sqrt(n)
 lower2
 ```
 
-## まとめ
+## 次週までの課題
+
+### 課題内容
+
+1.  小テストに向けて今回の内容を復習する。必ず手でコードを入力してRを実行する。
+
+2.  下記のデータをもとに、どの指標でもよいので、以下の内容を含めること。ただし、データには連続と離散のデータがあることに注意。また、ポケモンidの箱ひげ図を求めても意味がないなど、データの特徴を踏まえて分析すること。
+
+-   データ内のどの変数（こうげき、ぼうぎょなど）でもよいので、箱ひげ図とヒストグラムでデータを可視化する
+
+- ヒストグラムに正規分布をあてはめた図を描画する
+
+- ci関数とqt関数でこうげき以外の変数の95%信頼区間を算出する
+
+  - どちらの関数も値は一致します
+
+- **データの詳細は前の章の「次週までの課題」セクションを参照**
+
+### 提出方法
+
+-   R Markdownファイルで作成し、HTMLファイルに変換しTACTへ提出
+-   締め切りは今週の木曜日23:59まで
+
+## 参考文献
+
+- 📚清水（2021）『心理学統計法 (放送大学教材 1638)』放送大学教育振興会
+- 📚平井・岡・草薙（編著）（2022） 『教育・心理系研究のためのＲによるデータ分析―論文作成への理論と実践集』東京図書
+- 💻[ポケモンで学ぶデータ分析｜データの中身を知ろう](https://smart-hint.com/poke-data/introduction/#%E3%83%9D%E3%82%B1%E3%83%A2%E3%83%B3%E3%83%87%E3%83%BC%E3%82%BF%E3%82%92%E4%BD%BF%E3%81%A3%E3%81%A6%E3%83%87%E3%83%BC%E3%82%BF%E5%88%86%E6%9E%90%E3%82%92%E5%AD%A6%E3%81%B6)
+
+```{=html}
+<style>
+.infobox {
+  padding: 1em 1em 1em 4em;
+  margin-bottom: 10px;
+  border: 2px solid orange;
+  border-radius: 10px;
+  background: #f5f5f5 5px center/3em no-repeat;
+}
+
+.beg {
+  background-image: url("https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEjHtu3kBX8P39WYBBAjar9c8c1ladK2SYL6_gEMXFweQfauWVhSvCQP5KELsPX5KNL1uOddLLQ-aeMxv904OW_NFFfANhBYObfBV09KO2EXehrb9kMdCLZY1afsChib-7zIkBJbG6OrbJpM/s400/aisatsu_kodomo_boy.png");}
+
+.caution {
+  background-image: url("https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEhzMqkpQ7vLUKvumbm6AFwTLQiCe7tlDb2Q0MAiISLsesZHnhj0kbRjB4U3se3UrDIHfIy0hlahyphenhyphenQu-V2tOR2LcV_lX7U8P5a8jtqPYv3Ah4L-JoYi8PhoaoehumGIdp2vrsX0rRyhXqwA/s800/mark_chuui.png");}
+  
+</style>
+```
