--- a/index.Rmd
+++ b/index.Rmd
@@ -14,7 +14,7 @@ link-citations: yes
 
 # About
 
-　この資料は、名古屋大学大学院人文学研究科の学生を対象に開講されている言語統計処理（春学期）で使用する資料です。配布する際は、事前に作成者の寺井雅人まで連絡してください（[researchmap](https://researchmap.jp/terai-research)）。<br>
+　この資料は、名古屋大学大学院人文学研究科の学生を対象に開講されている言語統計処理（春学期）で使用する資料です。配布する際は、事前に作成者の寺井雅人まで連絡してください（[Website](https://sites.google.com/view/masatoterai/)）。<br>
 　この講義を担当するのは今年（2025年度）が初めてのため、内容は予告なく更新される可能性があります。各講義が実施されるまでは、すべての教材は準備段階のものと見なしてください。そのため、一部に整理されていない箇所があるかもしれません。このページの最終更新日（``` Last update(JST): ```）を確認するようにしてください。
 
 ## 講義概要
